--- a/app/public/home.html
+++ b/app/public/home.html
@@ -4,22 +4,31 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Title Text</title>
-  
-<!--   bootstrap link -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <title>Friend Finder</title>
 
-<!-- jquery link -->
-	<script src="https://code.jquery.com/jquery.js"></script>
+ <!-- jquery link -->
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>	 
+
+<!--   bootstrap link -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<!-- css -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+
 </head>
 <body>
 
 <!-- jumbotron  -->
-<div class="jumbotron">
-  <h1>Friend Finder</h1>
-  <p>Answer a few basic questions. <br> Then find the friend with the greatest compatability!</p>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Go to Survey</a></p>
-</div>
+<div class="container">
+
+	<div class="jumbotron">
+  		<h1>Friend Finder</h1>
+  		<p>Answer a few basic questions. <br> Then find the friend with the greatest compatability!</p>
+<!--   CLICK BUTTON TO GO TO SURVEY -->
+  		<p><a class="btn btn-primary btn-lg" href="survey.html" role="button">Go to Survey</a></p>
+	</div> <!-- CLOSING JUMBO DIV -->
+
+</div> <!-- CLOSING CONTAINER DIV -->
 
 </body>
 </html>
