--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,14 +1,227 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <link rel="stylesheet" href="">
-  
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Title Text</title>
-  
+  <title>Friend Finder Survey</title>
+
+ <!-- jquery link -->
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>	 
+
+<!--   bootstrap link -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<!-- css -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+
 </head>
 <body>
+
+<div class = "container">
+
+<h2> Survey Questions </h2>
+
+<!-- ABOUT YOU SECTION WITH STARTER INFO -->
+<h3> About You </h3>
+	<h4> Name (Required) </h4>
+		<input type="text" name="" id="name" class="form-control" required>
+	<br>
+	<h4> Link to Photo (Required) </h4>
+		<input type="text" name="" id="photo" class="form-control" required>
+
+<!-- BEGIN SURVEY QUESTIONS AND OPTIONS -->
+<h4> Question 1 </h4>
+	<h5> Text </h5>
+		<div class="dropdown">
+  			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    		Select an Option
+    			<span class="caret"></span>
+ 			</button>
+  			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+    			<li><a href="#">Option 1</a></li>
+   				<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 2</a></li>
+    			<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 3</a></li>
+    			<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 5</a></li>
+  			</ul>
+		</div> <!-- CLOSE DROPDOWN DIV -->	
+
+<h4> Question 2 </h4>
+	<h5> Text </h5>
+		<div class="dropdown">
+  			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    		Select an Option
+    			<span class="caret"></span>
+ 			</button>
+  			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+    			<li><a href="#">Option 1</a></li>
+   				<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 2</a></li>
+    			<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 3</a></li>
+    			<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 5</a></li>
+  			</ul>
+		</div> <!-- CLOSE DROPDOWN DIV -->	
+
+<h4> Question 3 </h4>
+	<h5> Text </h5>
+		<div class="dropdown">
+  			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    		Select an Option
+    			<span class="caret"></span>
+ 			</button>
+  			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+    			<li><a href="#">Option 1</a></li>
+   				<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 2</a></li>
+    			<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 3</a></li>
+    			<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 5</a></li>
+  			</ul>
+		</div> <!-- CLOSE DROPDOWN DIV -->	
+
+<h4> Question 4 </h4>
+	<h5> Text </h5>
+		<div class="dropdown">
+  			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    		Select an Option
+    			<span class="caret"></span>
+ 			</button>
+  			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+    			<li><a href="#">Option 1</a></li>
+   				<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 2</a></li>
+    			<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 3</a></li>
+    			<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 5</a></li>
+  			</ul>
+		</div> <!-- CLOSE DROPDOWN DIV -->	
+
+<h4> Question 5 </h4>
+	<h5> Text </h5>
+		<div class="dropdown">
+  			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    		Select an Option
+    			<span class="caret"></span>
+ 			</button>
+  			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+    			<li><a href="#">Option 1</a></li>
+   				<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 2</a></li>
+    			<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 3</a></li>
+    			<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 5</a></li>
+  			</ul>
+		</div> <!-- CLOSE DROPDOWN DIV -->	
+
+<h4> Question 6 </h4>
+	<h5> Text </h5>
+		<div class="dropdown">
+  			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    		Select an Option
+    			<span class="caret"></span>
+ 			</button>
+  			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+    			<li><a href="#">Option 1</a></li>
+   				<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 2</a></li>
+    			<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 3</a></li>
+    			<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 5</a></li>
+  			</ul>
+		</div>	<!-- CLOSE DROPDOWN DIV -->	
+
+<h4> Question 7 </h4>
+	<h5> Text </h5>
+		<div class="dropdown">
+  			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    		Select an Option
+    			<span class="caret"></span>
+ 			</button>
+  			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+    			<li><a href="#">Option 1</a></li>
+   				<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 2</a></li>
+    			<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 3</a></li>
+    			<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 5</a></li>
+  			</ul>
+		</div>	<!-- CLOSE DROPDOWN DIV -->	
+
+<h4> Question 8 </h4>
+	<h5> Text </h5>
+		<div class="dropdown">
+  			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    		Select an Option
+    			<span class="caret"></span>
+ 			</button>
+  			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+    			<li><a href="#">Option 1</a></li>
+   				<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 2</a></li>
+    			<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 3</a></li>
+    			<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 5</a></li>
+  			</ul>
+		</div> <!-- CLOSE DROPDOWN DIV -->	
+
+<h4> Question 9 </h4>
+	<h5> Text </h5>
+		<div class="dropdown">
+  			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    		Select an Option
+    			<span class="caret"></span>
+ 			</button>
+  			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+    			<li><a href="#">Option 1</a></li>
+   				<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 2</a></li>
+    			<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 3</a></li>
+    			<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 5</a></li>
+  			</ul>
+		</div>	<!-- CLOSE DROPDOWN DIV -->	
+
+<h4> Question 10 </h4>
+	<h5> Text </h5>
+		<div class="dropdown">
+  			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    		Select an Option
+    			<span class="caret"></span>
+ 			</button>
+  			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+    			<li><a href="#">Option 1</a></li>
+   				<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 2</a></li>
+    			<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 3</a></li>
+    			<li role="separator" class="divider"></li>
+    			<li><a href="#">Option 5</a></li>
+  			</ul>
+		</div>	<!-- CLOSE DROPDOWN DIV -->		
+<!-- END SURVEY QUESTIONS AND OPTIONS -->
+
+<br>
+
+<!-- SUBMIT BUTTON -->
+<p><a class="btn btn-primary btn-lg" href="" role="button">Submit</a></p>
+
+<!-- GO BACK BUTTON -->
+<p><a class="btn btn-primary btn-lg" href="home.html" role="button">Go Back</a></p>
+
+</div> <!-- CLOSING MAIN DIV -->
+
 
 </body>
 </html>
