--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -21,207 +21,222 @@
 <div class = "container">
 
 <h2> Survey Questions </h2>
-
-<!-- ABOUT YOU SECTION WITH STARTER INFO -->
-<h3> About You </h3>
-	<h4> Name (Required) </h4>
-		<input type="text" name="" id="name" class="form-control" required>
-	<br>
-	<h4> Link to Photo (Required) </h4>
-		<input type="text" name="" id="photo" class="form-control" required>
-
 <!-- BEGIN SURVEY QUESTIONS AND OPTIONS -->
-<h4> Question 1 </h4>
-	<h5> Text </h5>
-		<div class="dropdown">
-  			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    		Select an Option
-    			<span class="caret"></span>
- 			</button>
-  			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    			<li><a href="#">Option 1</a></li>
-   				<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 2</a></li>
-    			<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 3</a></li>
-    			<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 5</a></li>
-  			</ul>
-		</div> <!-- CLOSE DROPDOWN DIV -->	
+<form role="form">
+  <h3> About You </h3>
+  <div class="form-group">
+    <label for="">Name</label>
+    <input type="text" class="form-control" id="name">
+  </div>
 
-<h4> Question 2 </h4>
-	<h5> Text </h5>
-		<div class="dropdown">
-  			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    		Select an Option
-    			<span class="caret"></span>
- 			</button>
-  			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    			<li><a href="#">Option 1</a></li>
-   				<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 2</a></li>
-    			<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 3</a></li>
-    			<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 5</a></li>
-  			</ul>
-		</div> <!-- CLOSE DROPDOWN DIV -->	
+  <div class="form-group">
+    <label for="">Link to picture (Required) </label>
+    <input type="text" class="form-control" id="picture">
+  </div>
 
-<h4> Question 3 </h4>
-	<h5> Text </h5>
-		<div class="dropdown">
-  			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    		Select an Option
-    			<span class="caret"></span>
- 			</button>
-  			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    			<li><a href="#">Option 1</a></li>
-   				<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 2</a></li>
-    			<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 3</a></li>
-    			<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 5</a></li>
-  			</ul>
-		</div> <!-- CLOSE DROPDOWN DIV -->	
+  <h3><strong>Question 1</strong></h3>
+    <h4>XXX</h4>
+    <select data-placeholder="" class="chosen-select" id="q1">
+      <option value=""></option>
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+    </select>
 
-<h4> Question 4 </h4>
-	<h5> Text </h5>
-		<div class="dropdown">
-  			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    		Select an Option
-    			<span class="caret"></span>
- 			</button>
-  			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    			<li><a href="#">Option 1</a></li>
-   				<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 2</a></li>
-    			<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 3</a></li>
-    			<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 5</a></li>
-  			</ul>
-		</div> <!-- CLOSE DROPDOWN DIV -->	
+  <h3><strong>Question 2</strong></h3>
+    <h4>XXX</h4>
+    <select data-placeholder="" class="chosen-select" id="q2">
+      <option value=""></option>
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+    </select>
 
-<h4> Question 5 </h4>
-	<h5> Text </h5>
-		<div class="dropdown">
-  			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    		Select an Option
-    			<span class="caret"></span>
- 			</button>
-  			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    			<li><a href="#">Option 1</a></li>
-   				<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 2</a></li>
-    			<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 3</a></li>
-    			<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 5</a></li>
-  			</ul>
-		</div> <!-- CLOSE DROPDOWN DIV -->	
+  <h3><strong>Question 3</strong></h3>
+    <h4>XXX</h4>
+    <select data-placeholder="" class="chosen-select" id="q3">
+      <option value=""></option>
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+    </select>
 
-<h4> Question 6 </h4>
-	<h5> Text </h5>
-		<div class="dropdown">
-  			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    		Select an Option
-    			<span class="caret"></span>
- 			</button>
-  			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    			<li><a href="#">Option 1</a></li>
-   				<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 2</a></li>
-    			<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 3</a></li>
-    			<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 5</a></li>
-  			</ul>
-		</div>	<!-- CLOSE DROPDOWN DIV -->	
+  <h3><strong>Question 4</strong></h3>
+    <h4>XXX</h4>
+    <select data-placeholder="" class="chosen-select" id="q4">
+      <option value=""></option>
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+   </select>
 
-<h4> Question 7 </h4>
-	<h5> Text </h5>
-		<div class="dropdown">
-  			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    		Select an Option
-    			<span class="caret"></span>
- 			</button>
-  			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    			<li><a href="#">Option 1</a></li>
-   				<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 2</a></li>
-    			<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 3</a></li>
-    			<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 5</a></li>
-  			</ul>
-		</div>	<!-- CLOSE DROPDOWN DIV -->	
+  <h3><strong>Question 5</strong></h3>
+    <h4>XXX</h4>
+    <select data-placeholder="" class="chosen-select" id="q4">
+      <option value=""></option>
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+   </select>
 
-<h4> Question 8 </h4>
-	<h5> Text </h5>
-		<div class="dropdown">
-  			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    		Select an Option
-    			<span class="caret"></span>
- 			</button>
-  			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    			<li><a href="#">Option 1</a></li>
-   				<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 2</a></li>
-    			<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 3</a></li>
-    			<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 5</a></li>
-  			</ul>
-		</div> <!-- CLOSE DROPDOWN DIV -->	
+     <h3><strong>Question 6</strong></h3>
+    <h4>XXX</h4>
+    <select data-placeholder="" class="chosen-select" id="q4">
+      <option value=""></option>
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+   </select>
 
-<h4> Question 9 </h4>
-	<h5> Text </h5>
-		<div class="dropdown">
-  			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    		Select an Option
-    			<span class="caret"></span>
- 			</button>
-  			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    			<li><a href="#">Option 1</a></li>
-   				<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 2</a></li>
-    			<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 3</a></li>
-    			<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 5</a></li>
-  			</ul>
-		</div>	<!-- CLOSE DROPDOWN DIV -->	
+     <h3><strong>Question 7</strong></h3>
+    <h4>XXX</h4>
+    <select data-placeholder="" class="chosen-select" id="q4">
+      <option value=""></option>
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+   </select>
 
-<h4> Question 10 </h4>
-	<h5> Text </h5>
-		<div class="dropdown">
-  			<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    		Select an Option
-    			<span class="caret"></span>
- 			</button>
-  			<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    			<li><a href="#">Option 1</a></li>
-   				<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 2</a></li>
-    			<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 3</a></li>
-    			<li role="separator" class="divider"></li>
-    			<li><a href="#">Option 5</a></li>
-  			</ul>
-		</div>	<!-- CLOSE DROPDOWN DIV -->		
+     <h3><strong>Question 8</strong></h3>
+    <h4>XXX</h4>
+    <select data-placeholder="" class="chosen-select" id="q4">
+      <option value=""></option>
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+   </select>
+
+     <h3><strong>Question 9</strong></h3>
+    <h4>XXX</h4>
+    <select data-placeholder="" class="chosen-select" id="q4">
+      <option value=""></option>
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+   </select>
+
+     <h3><strong>Question 10</strong></h3>
+    <h4>XXX</h4>
+    <select data-placeholder="" class="chosen-select" id="q4">
+      <option value=""></option>
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+   </select>
+  
+  <br>
+</form>
 <!-- END SURVEY QUESTIONS AND OPTIONS -->
 
 <br>
 
 <!-- SUBMIT BUTTON -->
-<p><a class="btn btn-primary btn-lg" href="" role="button">Submit</a></p>
+<p><a class="btn btn-primary btn-lg" href="" id="submit" role="button">Submit</a></p>
 
 <!-- GO BACK BUTTON -->
 <p><a class="btn btn-primary btn-lg" href="home.html" role="button">Go Back</a></p>
 
+
 </div> <!-- CLOSING MAIN DIV -->
+
+<div class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        <p>One fine body&hellip;</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
 
 
 </body>
+
+<script type="text/javascript">
+  $(".submit").on("click", function(){
+    
+// Form validation
+      function validateForm() {
+      var isValid = true;
+      $('.form-control').each(function() {
+        if ( $(this).val() === '' )
+            isValid = false;
+      });
+      $('.chosen-select').each(function() {
+        if( $(this).val() === "")
+          isValid = false
+      })
+      return isValid;
+    }
+    // If all required fields are filled
+    if (validateForm() == true)
+    {
+      // Create an object for the user's data
+      var newFriend = {
+        name: $('#name').val().trim(),
+        picture: $('#picture').val().trim(),
+        answers: [$('#q1').val().trim(),
+        $('#q2').val().trim(),
+        $('#q3').val().trim(),
+        $('#q4').val().trim(),
+        $('#q5').val().trim(),
+        $('#q6').val().trim(),
+        $('#q7').val().trim(),
+        $('#q8').val().trim(),
+        $('#q9').val().trim(),
+        $('#q10').val().trim()
+        ]
+      };
+      console.log(newFriend);
+        // Grab the URL of the website
+        var currentURL = window.location.origin;
+        // AJAX post the data to the friends API. 
+        $.post(currentURL + "/api/friends", newFriend,
+        function(data){
+          // Grab the result from the AJAX post so that the best match's name and picture are displayed.
+            console.log(data);
+          $("#matchName").text(data.name);
+          $('#matchImg').attr("src", data.pic);
+          // Show the modal with the best match 
+          $("#resultsModal").modal('toggle');
+        });
+    }
+    else {
+      alert("Please fill out all fields before submitting!");
+    }
+
+return false;
+});
+
+</script>
+
 </html>
