--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Friend Finder</title>
-
- <!-- jquery link -->
-	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>	 
-
-<!--   bootstrap link -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-<!-- css -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>FriendFinder</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cerulean/bootstrap.min.css" rel="stylesheet" integrity="sha384-zF4BRsG/fLiTGfR9QL82DrilZxrwgY/+du4p/c7J72zZj+FLYq4zY00RylP9ZjiT" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </head>
+
+
 <body>
 
 <!-- jumbotron  -->
@@ -25,7 +21,7 @@
   		<h1>Friend Finder</h1>
   		<p>Answer a few basic questions. <br> Then find the friend with the greatest compatability!</p>
 <!--   CLICK BUTTON TO GO TO SURVEY -->
-  		<p><a class="btn btn-primary btn-lg" href="survey.html" role="button">Go to Survey</a></p>
+  		<p><a class="btn btn-primary btn-lg" href="/survey" role="button">Go to Survey</a></p>
 	</div> <!-- CLOSING JUMBO DIV -->
 
 </div> <!-- CLOSING CONTAINER DIV -->
