--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Friend Finder Survey</title>
-
- <!-- jquery link -->
-	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>	 
-
-<!--   bootstrap link -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-<!-- css -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>FriendFinder</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cerulean/bootstrap.min.css" rel="stylesheet" integrity="sha384-zF4BRsG/fLiTGfR9QL82DrilZxrwgY/+du4p/c7J72zZj+FLYq4zY00RylP9ZjiT" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </head>
+
+
+
 <body>
 
 <div class = "container">
@@ -24,6 +21,7 @@
 <!-- BEGIN SURVEY QUESTIONS AND OPTIONS -->
 <form role="form">
   <h3> About You </h3>
+  <section id="friend-form">
   <div class="form-group">
     <label for="">Name</label>
     <input type="text" class="form-control" id="name">
@@ -31,7 +29,7 @@
 
   <div class="form-group">
     <label for="">Link to picture (Required) </label>
-    <input type="text" class="form-control" id="picture">
+    <input type="text" class="form-control" id="photo">
   </div>
 
   <h3><strong>Question 1</strong></h3>
@@ -151,10 +149,10 @@
 <br>
 
 <!-- SUBMIT BUTTON -->
-<p><a class="btn btn-primary btn-lg" href="" id="submit" role="button">Submit</a></p>
+<p><button type="submit" class="btn btn-primary btn-lg" id="submit">Submit</button></p>
 
 <!-- GO BACK BUTTON -->
-<p><a class="btn btn-primary btn-lg" href="home.html" role="button">Go Back</a></p>
+<p><a class="btn btn-danger btn-lg" href="home.html" role="button">Go Back</a></p>
 
 
 </div> <!-- CLOSING MAIN DIV -->
@@ -176,67 +174,90 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
+</section> <!-- closing section  -->
 
 
 
 </body>
 
-<script type="text/javascript">
-  $(".submit").on("click", function(){
-    
-// Form validation
-      function validateForm() {
-      var isValid = true;
-      $('.form-control').each(function() {
-        if ( $(this).val() === '' )
-            isValid = false;
-      });
-      $('.chosen-select').each(function() {
-        if( $(this).val() === "")
-          isValid = false
-      })
-      return isValid;
-    }
-    // If all required fields are filled
-    if (validateForm() == true)
-    {
-      // Create an object for the user's data
-      var newFriend = {
-        name: $('#name').val().trim(),
-        picture: $('#picture').val().trim(),
-        answers: [$('#q1').val().trim(),
-        $('#q2').val().trim(),
-        $('#q3').val().trim(),
-        $('#q4').val().trim(),
-        $('#q5').val().trim(),
-        $('#q6').val().trim(),
-        $('#q7').val().trim(),
-        $('#q8').val().trim(),
-        $('#q9').val().trim(),
-        $('#q10').val().trim()
-        ]
-      };
-      console.log(newFriend);
-        // Grab the URL of the website
-        var currentURL = window.location.origin;
-        // AJAX post the data to the friends API. 
-        $.post(currentURL + "/api/friends", newFriend,
-        function(data){
-          // Grab the result from the AJAX post so that the best match's name and picture are displayed.
-            console.log(data);
-          $("#matchName").text(data.name);
-          $('#matchImg').attr("src", data.pic);
-          // Show the modal with the best match 
-          $("#resultsModal").modal('toggle');
-        });
-    }
-    else {
-      alert("Please fill out all fields before submitting!");
-    }
+ <script type="text/javascript">
+    // Listener for submit button click
+    $('#submit').on('click', function(event) {
+        // prevents the default submit button action
+        event.preventDefault();
+        // Set local variables
+        var matchStatus = $('.modal-title');
+        var modalBody = $('.modal-body');
+        // set responses to local variables
+        var name = $('#name').val().trim();
+        var photo = $('#photo').val();
+        var q1 = parseInt($('#q1').val());
+        var q2 = parseInt($('#q2').val());
+        var q3 = parseInt($('#q3').val());
+        var q4 = parseInt($('#q4').val());
+        var q5 = parseInt($('#q5').val());
+        var q6 = parseInt($('#q6').val());
+        var q7 = parseInt($('#q7').val());
+        var q8 = parseInt($('#q8').val());
+        var q9 = parseInt($('#q9').val());
+        var q10 = parseInt($('#q10').val());
 
-return false;
-});
 
-</script>
+        // Set data to be sent to server
+        var userData = {
+            name: name,
+            photo: photo,
+            scores: [
+              q1,
+              q2,
+              q3,
+              q4,
+              q5,
+              q6,
+              q7,
+              q8,
+              q9,
+              q10
+            ]
+        };
+
+        // If responses are valid...
+        if (
+            (name !== "") && (photo !== "") && (!isNaN(q1)) &&
+            (!isNaN(q2)) && (!isNaN(q3)) && (!isNaN(q4)) &&
+            (!isNaN(q5)) && (!isNaN(q6)) && (!isNaN(q7)) &&
+            (!isNaN(q8)) && (!isNaN(q9)) && (!isNaN(q10))
+        ) {
+            // Grab the URL of the website
+            var currentURL = window.location.origin;
+
+            // AJAX post the data to the friends API. 
+            $.post(currentURL + "/api/friends", userData, function(data) {
+                // If the data has a match, then show this
+                if (data.name !== undefined) {
+                    matchStatus.html('Your match...');
+                    modalBody.html('<p>...is ' + data.name + '!</p><img src="' + data.photo + '" height="200">');
+                } else {
+                  // If no match, show this
+                    matchStatus.html('Not enough data!');
+                    modalBody.html('<p>Unfortunately there is not yet enough user data to match you</p>');
+                }
+
+                // Toggle modal on
+                $('.modal').modal('toggle');
+
+            });
+        } else {
+            // If the form was not valid, this error is shown
+            matchStatus.html('Error...');
+            modalBody.html('Please answer all questions on the form.');
+            // Toggle modal on
+            $('.modal').modal('toggle');
+        }
+    });
+
+    // $('#friend-form').reset();
+    </script>
+
 
 </html>
