updated and routes working

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -24,6 +24,12 @@
   		<p><a class="btn btn-primary btn-lg" href="/survey" role="button">Go to Survey</a></p>
 	</div> <!-- CLOSING JUMBO DIV -->
 
+  <footer class="footer">
+      <div class="container">
+        <p><a href="/api/friends">API Friends List</a></p>
+      </div>
+  </footer>
+
 </div> <!-- CLOSING CONTAINER DIV -->
 
 </body>
