--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,253 +10,162 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </head>
 
-
-
 <body>
 
-<div class = "container">
+  <div class="container">
 
-<h2> Survey Questions </h2>
-<!-- BEGIN SURVEY QUESTIONS AND OPTIONS -->
-<form role="form">
-  <h3> About You </h3>
-  <section id="friend-form">
-  <div class="form-group">
-    <label for="">Name</label>
-    <input type="text" class="form-control" id="name">
+    <h2>Survey Questions</h2>
+    <br>
+
+    <h3><strong>About You</strong></h3>
+    <h4>Name (Required)</h4>
+    <input type="text" id="name" class="form-control" required>
+
+    <h4>Link to Photo Image (Required)</h4>
+    <input type="text" id="photo" class="form-control" required>
+
+    <br>
+
+    <h3><strong>Question 1</strong></h3>
+    <h4>Text text text</h4>
+    <select class="chosen-select" id="q1">
+      <option value=""></option>
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+    </select> <!-- close options  -->
+
+    <h3><strong>Question 2</strong></h3>
+    <h4>Text text text</h4>
+    <select class="chosen-select" id="q2">
+      <option value=""></option>
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+    </select> <!-- close options  -->
+
+
+    <h3><strong>Question 3</strong></h3>
+    <h4>Text text text</h4>
+    <select class="chosen-select" id="q3">
+      <option value=""></option>
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+    </select> <!-- close options  -->
+
+
+    <h3><strong>Question 4</strong></h3>
+    <h4>Text text text</h4>
+    <select class="chosen-select" id="q4">
+      <option value=""></option>
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+    </select> <!-- close options  -->
+
+
+    <h3><strong>Question 5</strong></h3>
+    <h4>Text text text</h4>
+    <select class="chosen-select" id="q5">
+      <option value=""></option>
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
+    </select> <!-- close options  -->
+
+    <!-- Submit Button -->
+    <br>
+    <br>
+
+    <button type="submit" class="btn btn-primary" id="submit"><i class="fa fa-check-circle" aria-hidden="true"></i>
+     Submit</button>
+
+     <a class="btn btn-danger" href="/home" role="button">Cancel</a>
+
+    <br>
+
   </div>
 
-  <div class="form-group">
-    <label for="">Link to picture (Required) </label>
-    <input type="text" class="form-control" id="photo">
+  <!-- Modal -->
+  <div id="results-modal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h2 class="modal-title"><strong>Your best match is...</strong></h2>
+        </div>
+        <div class="modal-body">
+          <h2 id="match-name"></h2>
+          <img id="match-img" src="https://static1.squarespace.com/static/5459ab36e4b026480c006f96/56d5174b4c2f8513ee106974/56d5174ce32140fc7fd1fb23/1456805821750/Its-Always-Sunny-Frank-Retires.png" alt="" height="350" width="350">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+
+    </div>
   </div>
 
-  <h3><strong>Question 1</strong></h3>
-    <h4>XXX</h4>
-    <select data-placeholder="" class="chosen-select" id="q1">
-      <option value=""></option>
-      <option value="1">1 (Strongly Disagree)</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5 (Strongly Agree)</option>
-    </select>
+  <script type="text/javascript">
+    // Capture the form inputs
+    $("#submit").on("click", function(event) {
+      event.preventDefault();
 
-  <h3><strong>Question 2</strong></h3>
-    <h4>XXX</h4>
-    <select data-placeholder="" class="chosen-select" id="q2">
-      <option value=""></option>
-      <option value="1">1 (Strongly Disagree)</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5 (Strongly Agree)</option>
-    </select>
+      // Form validation
+      function validateForm() {
+        var isValid = true;
+        $(".form-control").each(function() {
+          if ($(this).val() === "") {
+            isValid = false;
+          }
+        });
 
-  <h3><strong>Question 3</strong></h3>
-    <h4>XXX</h4>
-    <select data-placeholder="" class="chosen-select" id="q3">
-      <option value=""></option>
-      <option value="1">1 (Strongly Disagree)</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5 (Strongly Agree)</option>
-    </select>
+        $(".chosen-select").each(function() {
 
-  <h3><strong>Question 4</strong></h3>
-    <h4>XXX</h4>
-    <select data-placeholder="" class="chosen-select" id="q4">
-      <option value=""></option>
-      <option value="1">1 (Strongly Disagree)</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5 (Strongly Agree)</option>
-   </select>
+          if ($(this).val() === "") {
+            isValid = false;
+          }
+        });
+        return isValid;
+      }
 
-  <h3><strong>Question 5</strong></h3>
-    <h4>XXX</h4>
-    <select data-placeholder="" class="chosen-select" id="q4">
-      <option value=""></option>
-      <option value="1">1 (Strongly Disagree)</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5 (Strongly Agree)</option>
-   </select>
-
-     <h3><strong>Question 6</strong></h3>
-    <h4>XXX</h4>
-    <select data-placeholder="" class="chosen-select" id="q4">
-      <option value=""></option>
-      <option value="1">1 (Strongly Disagree)</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5 (Strongly Agree)</option>
-   </select>
-
-     <h3><strong>Question 7</strong></h3>
-    <h4>XXX</h4>
-    <select data-placeholder="" class="chosen-select" id="q4">
-      <option value=""></option>
-      <option value="1">1 (Strongly Disagree)</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5 (Strongly Agree)</option>
-   </select>
-
-     <h3><strong>Question 8</strong></h3>
-    <h4>XXX</h4>
-    <select data-placeholder="" class="chosen-select" id="q4">
-      <option value=""></option>
-      <option value="1">1 (Strongly Disagree)</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5 (Strongly Agree)</option>
-   </select>
-
-     <h3><strong>Question 9</strong></h3>
-    <h4>XXX</h4>
-    <select data-placeholder="" class="chosen-select" id="q4">
-      <option value=""></option>
-      <option value="1">1 (Strongly Disagree)</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5 (Strongly Agree)</option>
-   </select>
-
-     <h3><strong>Question 10</strong></h3>
-    <h4>XXX</h4>
-    <select data-placeholder="" class="chosen-select" id="q4">
-      <option value=""></option>
-      <option value="1">1 (Strongly Disagree)</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5 (Strongly Agree)</option>
-   </select>
-  
-  <br>
-</form>
-<!-- END SURVEY QUESTIONS AND OPTIONS -->
-
-<br>
-
-<!-- SUBMIT BUTTON -->
-<p><button type="submit" class="btn btn-primary btn-lg" id="submit">Submit</button></p>
-
-<!-- GO BACK BUTTON -->
-<p><a class="btn btn-danger btn-lg" href="home.html" role="button">Go Back</a></p>
-
-
-</div> <!-- CLOSING MAIN DIV -->
-
-<div class="modal fade" tabindex="-1" role="dialog">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Modal title</h4>
-      </div>
-      <div class="modal-body">
-        <p>One fine body&hellip;</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-</section> <!-- closing section  -->
-
-
-
-</body>
-
- <script type="text/javascript">
-    // Listener for submit button click
-    $('#submit').on('click', function(event) {
-        // prevents the default submit button action
-        event.preventDefault();
-        // Set local variables
-        var matchStatus = $('.modal-title');
-        var modalBody = $('.modal-body');
-        // set responses to local variables
-        var name = $('#name').val().trim();
-        var photo = $('#photo').val();
-        var q1 = parseInt($('#q1').val());
-        var q2 = parseInt($('#q2').val());
-        var q3 = parseInt($('#q3').val());
-        var q4 = parseInt($('#q4').val());
-        var q5 = parseInt($('#q5').val());
-        var q6 = parseInt($('#q6').val());
-        var q7 = parseInt($('#q7').val());
-        var q8 = parseInt($('#q8').val());
-        var q9 = parseInt($('#q9').val());
-        var q10 = parseInt($('#q10').val());
-
-
-        // Set data to be sent to server
+      if (validateForm()) {
         var userData = {
-            name: name,
-            photo: photo,
-            scores: [
-              q1,
-              q2,
-              q3,
-              q4,
-              q5,
-              q6,
-              q7,
-              q8,
-              q9,
-              q10
-            ]
+          name: $("#name").val(),
+          photo: $("#photo").val(),
+          scores: [
+            $("#q1").val(),
+            $("#q2").val(),
+            $("#q3").val(),
+            $("#q4").val(),
+            $("#q5").val(),
+          ]
         };
 
-        // If responses are valid...
-        if (
-            (name !== "") && (photo !== "") && (!isNaN(q1)) &&
-            (!isNaN(q2)) && (!isNaN(q3)) && (!isNaN(q4)) &&
-            (!isNaN(q5)) && (!isNaN(q6)) && (!isNaN(q7)) &&
-            (!isNaN(q8)) && (!isNaN(q9)) && (!isNaN(q10))
-        ) {
-            // Grab the URL of the website
-            var currentURL = window.location.origin;
-
-            // AJAX post the data to the friends API. 
-            $.post(currentURL + "/api/friends", userData, function(data) {
-                // If the data has a match, then show this
-                if (data.name !== undefined) {
-                    matchStatus.html('Your match...');
-                    modalBody.html('<p>...is ' + data.name + '!</p><img src="' + data.photo + '" height="200">');
-                } else {
-                  // If no match, show this
-                    matchStatus.html('Not enough data!');
-                    modalBody.html('<p>Unfortunately there is not yet enough user data to match you</p>');
-                }
-
-                // Toggle modal on
-                $('.modal').modal('toggle');
-
-            });
-        } else {
-            // If the form was not valid, this error is shown
-            matchStatus.html('Error...');
-            modalBody.html('Please answer all questions on the form.');
-            // Toggle modal on
-            $('.modal').modal('toggle');
-        }
+        $.post("/api/friends", userData, function(data) {
+          $("#match-name").text(data.name);
+          $("#match-img").attr("src", data.photo);
+          $("#results-modal").modal("toggle");
+        });
+      } else {
+        alert("Make sure you answered all of the questions!");
+      }
     });
+  </script>
 
-    // $('#friend-form').reset();
-    </script>
-
+</body>
 
 </html>
